account for scrollbar gutter, fix user defined rules on ids page

--- a/src/opnsense/www/css/opnsense_bootgrid.css
+++ b/src/opnsense/www/css/opnsense_bootgrid.css
@@ -48,7 +48,7 @@
     white-space: nowrap;
     line-height: 1.2;
     vertical-align: top;
-    border-top: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
     border-right: 1px solid #e0e0e0;
 }
 
@@ -65,10 +65,6 @@
 
 .tabulator .tabulator-header .tabulator-col .tabulator-col-content {
     padding: 0px;
-}
-
-.tabulator-tableholder {
-    background-color: #fff;
 }
 
 .tabulator-page-counter {
@@ -99,7 +95,9 @@
 }
 
 .tabulator .tabulator-header {
-    border-top: 1px solid #999;
+    border-top: 1px solid #eee;
+    border-left: 1px solid #eee;
+    border-right: 1px solid #eee;
 }
 
 /* move border from footer to last row */
@@ -107,7 +105,19 @@
     border-top: none;
 }
 .tabulator .tabulator-tableholder {
-    border-bottom: 1px solid #999;
+    background-color: #fff;
+    border-left: 1px solid #eee;
+    border-right: 1px solid #eee;
+    overflow: auto;
+    scrollbar-gutter: stable;
+}
+
+.tabulator-tableholder::after {
+    content: '';
+    display: block;
+    width: 1px;
+    height: 1px;
+    min-width: 100%;
 }
 
 .tabulator .tabulator-footer .tabulator-paginator .tabulator-page:first-child {
@@ -131,11 +141,6 @@
     border-color: #C03E14;
     color: #fff;
     cursor: default;
-}
-
-/* header border */
-.tabulator-header {
-    border-top: 1px solid #eee;
 }
 
 /* Zebra striping, border line corrections and hover/selection behavior */
@@ -174,10 +179,14 @@
 /* Checkbox column styles */
 .tabulator .tabulator-header .tabulator-frozen.tabulator-frozen-left {
     border-right: 1px solid #aaa;
+    border-left: 1px solid #eee;
+
 }
 .tabulator-row .tabulator-cell.tabulator-frozen.tabulator-frozen-left {
     border-right: 1px solid #aaa;
     border-top: 1px solid #eee;
+    border-bottom: 1px solid #aaa;
+    border-left: 1px solid #eee;
 }
 .tabulator-col.tabulator-row-header.tabulator-frozen.tabulator-frozen-left {
     background-color: #eee;
@@ -187,7 +196,6 @@
 }
 .tabulator-row:last-child >
 .tabulator-cell.tabulator-row-header.tabulator-frozen.tabulator-frozen-left:first-child {
-    border-bottom: none;
 }
 
 .tabulator .tabulator-header .tabulator-col.tabulator-sortable .tabulator-col-title {
